<resources>
    <string name="app_name">Yify Movies</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="failed_to_load_movies">Failed to load movies</string>
    <string name="server_url">https://yts.to/api/v2/</string>
    <string name="generes">Genres: </string>
    <string name="mpa_rating">MPA Rating</string>
    <string name="runtime">Runtime</string>
    <string name="quality">Quality</string>
    <string name="title">Title</string>
    <string name="seeds">Seeds</string>
    <string name="leechers">Leechers</string>
    <string name="peers">Peers</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="directors">Directors</string>
    <string name="actors">Actors</string>
    <string name="description">Description</string>
    <string name="summary">Summary</string>
    <string name="review_text">Review Text</string>
    <string name="ok_button_label">OK</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="quality_3d">3D</string>
    <string name="min_rating">Minimum Rating</string>
    <string name="quality_all">All</string>
    <string name="movie_filter">Movie Filter</string>
    <string name="search_hint">Search by Movie Title, Actor Name, Director Name</string>
    <string name="sort_by">Sort by</string>
    <string name="date_added">Date added</string>
    <string name="likes">Likes</string>
    <array name="genres_list">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentry</item>
        <item>Family</item>
        <item>Film-Noir</item>
        <item>Horror</item>
        <item>Musical</item>
        <item>Romance</item>
        <item>Sport</item>
        <item>War</item>
        <item>Adventure</item>
        <item>Biography</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Music</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
        <item>Western</item>
    </array>
    <array name="sort_by">
        <item>title</item>
        <item>year</item>
        <item>rating</item>
        <item>peers</item>
        <item>seeds</item>
        <item>download_count</item>
        <item>like_count</item>
        <item>date_added</item>
    </array>
</resources>
