<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1" android:orientation="vertical" android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/quality" style="@android:style/TextAppearance.Large" />

            <RadioGroup android:id="@+id/quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">

                <RadioButton android:id="@+id/btn_720p"
                    android:layout_width="0dp" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/quality_720p" />

                <RadioButton android:id="@+id/btn_1080p"
                    android:layout_width="0dp" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/quality_1080p"  />


                <RadioButton android:id="@+id/btn_3d"
                    android:layout_width="0dp" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/quality_3d" />


                <RadioButton android:id="@+id/btn_all"
                    android:layout_width="0dp" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/quality_all" />

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/min_rating" style="@android:style/TextAppearance.Large" />

            <SeekBar
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="26dp"
                android:max="10"/>

        <TextView android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/sort_by" style="@android:style/TextAppearance.Large" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sort_by"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="bottom">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_apply"
            android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Apply"
            card_view:bb_icon_left="fa-filter"
            card_view:bb_type="success"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Cancel"
            card_view:bb_icon_left="fa-cancel"
            card_view:bb_type="default"
            />

    </LinearLayout>
</LinearLayout>