<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view_screenshots"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp">
       <TextView android:id="@id/quality"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" style="@style/TextAppearance.AppCompat.Large" android:text="@string/quality" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/seeds"
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content" android:text="@string/seeds" />
            <TextView android:id="@+id/peers"
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content" android:text="@string/peers" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <TextView android:id="@+id/resolution"
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content" android:text="@string/resolution" />
            <TextView android:id="@+id/size"
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content" android:text="@string/size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Magnet"
                app:bb_icon_right="fa-magnet"
                app:bb_type="primary"
                />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Download"
                app:bb_icon_right="fa-download"
                app:bb_type="primary"
                />

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>
